ex71: classifiaction using Logistic Regression

--- a/Notebook_ex71.ipynb
+++ b/Notebook_ex71.ipynb
@@ -57,26 +57,56 @@
    "id": "61bce098-64d0-4a30-bf44-4714afffb0f5",
    "metadata": {},
    "source": [
-    "1. On the same plot, plot the sigmoid function and the custom sigmoids defined as:\n",
-    "\n",
-    "- `sigmoid1(x) = 1/(1+ exp(-(0.5*x + 3)))`\n",
-    "\n",
-    "- `sigmoid2(x) = 1/(1+ exp(-(5*x + 11)))`\n",
-    "\n",
-    "- Add a line representing the probability=0.5\n",
-    "\n",
-    "The plot should look like this:\n",
-    "\n",
-    "![ex2q1](./w2_day2_ex2_q1.png)"
+    "2. Predict the probabilities for `x_pred = [[0.5]]` using `predict_proba`"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "38dafb1f-74be-49db-8641-9f6e215b6feb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.61450206 0.38549794]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clf.predict_proba(x_pred))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "adb09d07-0199-44df-a8ba-71a979d38a06",
+   "metadata": {},
+   "source": [
+    "3. Print the coefficients (`coef_`), the intercept (`intercept_`) and the score of the logistic regression of X and y."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "6d7dcc73-82a1-42a3-8474-075dcc6c5097",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.81793264]]\n",
+      "[-0.87524276]\n",
+      "0.7142857142857143\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(clf.coef_)\n",
+    "print(clf.intercept_)\n",
+    "print(clf.score(X, y))"
+   ]
   }
  ],
  "metadata": {
